--- a/backEnd/CRMSSpringApp/src/main/resources/templates/home/index.html
+++ b/backEnd/CRMSSpringApp/src/main/resources/templates/home/index.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html >
-<html layout:decorator="shared/homelayout"
-	xmlns:th="http://www.thymeleaf.org">
-<body>
-	<th:block layout:fragment="header">
-		<link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />
-	</th:block>
-	
-	<th:block layout:fragment="content">
+<html layout:decorator="shared/base"
+	  xmlns:th="http://www.thymeleaf.org">
+<div class="content"  layout:fragment="content">
+	11111111111111111111
 
-		<h2>Welcome to home page!</h2>
-	</th:block>
-	
-	<th:block layout:fragment="footer">
-	</th:block>
-	
-</body>
-</html>
+</div>
