--- a/backEnd/CRMSSpringApp/src/main/resources/templates/shared/homelayout.html
+++ b/backEnd/CRMSSpringApp/src/main/resources/templates/shared/homelayout.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Cat Information</title>
+	<title>Student Info</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" th:href="@{/css/homelayout.css}" />
 	<th:block layout:fragment="header"></th:block>	
@@ -11,7 +11,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Car Information</a>
+  <a class="navbar-brand" href="/">Student Info</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,7 +22,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/cars">Car List</a>
+        <a class="nav-link" href="/students">Student List</a>
       </li>
     </ul>
   </div>
