--- a/backEnd/CRMSSpringApp/src/main/resources/static/css/homelayout.css
+++ b/backEnd/CRMSSpringApp/src/main/resources/static/css/homelayout.css
@@ -1,2 +1,7 @@
-#mainpanel { padding: 20px; }
-.validation-message { color: red; }
+#mainpanel {
+    padding: 20px;
+}
+
+.validation-message {
+    color: red;
+}
