--- a/backEnd/CRMSSpringApp/src/main/resources/templates/forgot-password.html
+++ b/backEnd/CRMSSpringApp/src/main/resources/templates/forgot-password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,42 +20,43 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body class="bg-dark">
+<body class="bg-dark">
 
-    <div class="container">
-      <div class="card card-login mx-auto mt-5">
+<div class="container">
+    <div class="card card-login mx-auto mt-5">
         <div class="card-header">Reset Password</div>
         <div class="card-body">
-          <div class="text-center mb-4">
-            <h4>Forgot your password?</h4>
-            <p>Enter your email address and we will send you instructions on how to reset your password.</p>
-          </div>
-          <form>
-            <div class="form-group">
-              <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Enter email address" required="required" autofocus="autofocus">
-                <label for="inputEmail">Enter email address</label>
-              </div>
+            <div class="text-center mb-4">
+                <h4>Forgot your password?</h4>
+                <p>Enter your email address and we will send you instructions on how to reset your password.</p>
             </div>
-            <a class="btn btn-primary btn-block" href="login.html">Reset Password</a>
-          </form>
-          <div class="text-center">
-            <a class="d-block small mt-3" href="register.html">Register an Account</a>
-            <a class="d-block small" href="login.html">Login Page</a>
-          </div>
+            <form>
+                <div class="form-group">
+                    <div class="form-label-group">
+                        <input type="email" id="inputEmail" class="form-control" placeholder="Enter email address"
+                               required="required" autofocus="autofocus">
+                        <label for="inputEmail">Enter email address</label>
+                    </div>
+                </div>
+                <a class="btn btn-primary btn-block" href="login.html">Reset Password</a>
+            </form>
+            <div class="text-center">
+                <a class="d-block small mt-3" href="register.html">Register an Account</a>
+                <a class="d-block small" href="login.html">Login Page</a>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  </body>
+</body>
 
 </html>
