--- a/backEnd/CRMSSpringApp/src/main/resources/templates/category/list.html
+++ b/backEnd/CRMSSpringApp/src/main/resources/templates/category/list.html
@@ -12,13 +12,13 @@
         <th>Price</th>
         </thead>
         <tbody>
-        <tr th:each="student : ${categories}">
-            <td th:text="${student.id}"></td>
-            <td th:text="${student.name}"></td>
-            <td th:text="${student.price}"></td>
+        <tr th:each="category : ${categories}">
+            <td th:text="${category.id}"></td>
+            <td th:text="${category.name}"></td>
+            <td th:text="${category.price}"></td>
             <td>
-                <a th:href="@{'/category/' + ${student.id}}">Edit</a>&nbsp;
-                <a th:href="@{'/category/delete/' + ${student.id}}">Delete</a>
+                <a th:href="@{'/category/' + ${category.id}}">Edit</a>&nbsp;
+                <a th:href="@{'/category/delete/' + ${category.id}}">Delete</a>
             </td>
         </tr>
         </tbody>
