--- a/backEnd/CRMSSpringApp/src/main/resources/templates/home/index.html
+++ b/backEnd/CRMSSpringApp/src/main/resources/templates/home/index.html
@@ -40,7 +40,10 @@
                         <td th:text="${booking.car.getName()}"></td>
                         <td th:text="${booking.customer.getFullname()}"></td>
                         <td>
-                            <a target="_blank" th:href="@{'/payment/' + ${booking.id}}">Show Payment</a>&nbsp;
+
+                            <a onclick="window.open(this.href, 'mywin',
+'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" th:href="@{'/payment/' + ${booking.id}}">Show
+                                Payment</a>&nbsp;
                         </td>
 
                     </tr>
