--- a/backEnd/CRMSSpringApp/src/main/resources/templates/shared/base.html
+++ b/backEnd/CRMSSpringApp/src/main/resources/templates/shared/base.html
@@ -53,17 +53,17 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="web/Customer/list">
+            <a class="nav-link" href="/customer/list">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>Cars</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="web/Customer/list">
+            <a class="nav-link" href="/customer/list">
                 <i class="fas fa-fw fa-table"></i>
                 <span>Customers</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="web/category/list">
+            <a class="nav-link" href="/category/list">
                 <i class="fas fa-fw fa-table"></i>
                 <span>Car Category</span></a>
         </li>
